kmongo.yml
# ReplicaSet for MongoDB
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emongo
 
  labels:
    app: emongo
spec:
  selector:
    matchLabels:
      app: emongo
  replicas: 1
  template:
    metadata:
      labels:
        app: emongo
    spec:
    containers:
      - name: emongo
        image: mongo:4
        ports:
        - name: emongo-port
          containerPort: 27017
        volumeMounts:
         - name: emongo
           mountPath: /data/db
    volumes:
       - name: emongo
         persistentVolumeClaim:
           claimName: emongo

---
# Service for MongoDB
apiVersion: v1
kind: Service
metadata:
  name: emongo
  # Add the 'namespace' field here
spec:
  type: ClusterIP
  selector:
    app: emongo
  ports:
  - port: 27017
    targetPort: 27017
    protocol: TCP
