ksqlvol.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emartdb

  labels:
    app: emartdb
spec:
  selector:
    matchLabels:
      app: emartdb
  replicas: 1
  template:
    metadata:
      labels:
        app: emartdb
    spec:
    containers:
      - name: emartdb
        image: mysql:5.7.25
        ports:
        - name: emysqldb-port
          containerPort: 3306
        volumeMounts:
             - name: emartdb
               mountPath: /var/lib/mysql
    volumes:
        - name: emartdb
          persistentVolumeClaim:
            claimName: emartdb  
---


---
# MySQL Service
apiVersion: v1
kind: Service
metadata:
  name: emartdb
   # Add the 'namespace' field here
spec:
  type: ClusterIP
  selector:
    app: emartdb
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
