kingress.yml
# Ingress for frontend
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-frontend
   # Add the 'namespace' field here
  labels:
    name: emartclient
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: emartclientsvc
            port:
              number: 4200

---
# Ingress for backend
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-backend
  # Add the 'namespace' field here
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: emartapisvc
            port:
              number: 5000
      - pathType: Prefix
        path: "/webapi"
        backend:
          service:
            name: emartwebapisvc
            port:
              number: 9000
